Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.3***

**	Support SystemVerilog 2009 standard, including new keywords.

****	Fix preprocessing ifdef `INDIRECT(DEFINE).

****	Fix preprocessor preservation of newlines across macro substitutions.

****	Fix preprocessor stringification of nested macros.

****	Fix preprocessor whitespace on define arguments

* Verilog::Language 3.251 2010/06/29

***	Add vppreproc --dump-defines option.

****	Fix vpassert "POSIX::BUFSIZ" error on Perl 5.8.8.  [Chitlesh Goorah]

* Verilog::Language 3.250 2010/06/21

**	Add parsing of "defparam", including SigParser::defparam callback,
	Netlist::ContAssign object, and accessors. [Pierre-David Pfister]

****	Fix complex {...} port declarations, bug262.  [Evgeni Stavinov]

* Verilog::Language 3.241 2010/05/01

***	Add vpassert --call-* switches to use user's PLI display functions.

****	Disable Parser unreadback() data during std:: parsing. [Mark Nodine]

****	Fix preprocessing some DOS carriage returns, broke in 3.240.

* Verilog::Language 3.240 2010/03/29

***	Add vpassert vp_coverage_off/on pragmas.

***	Add vpassert --synthcov, --axiom and --vcs switches.

****	Pass pin numbers for functions/tasks to SigParser::port_cb.

****	Improve performance of large file parsing.  [Jeffrey Short]

****	Fix parsing single files > 2GB.  [Jeffrey Short]

****	Fix vpassert to insert `lines on every line where needed.

****	Fix "disable iff {property_expr}", bug221.  [Rick Ramus]

****	Fix UDPs with min:typ:max delays, bug228.  [Pihay Saelieo]

****	Fix Pod::Usage dependency, rt51024.  [Andreas Koenig]

****	Fix Mac OS-X compile issues.  [Joshua Wise]

****	Fix Verilog::EditFiles documentation, bug222. [Evgeni Stavinov]

* Verilog::Language 3.231 2010/02/21

****	Support 1800-2009 /*comments*/ in define values.
