@@ -1,4 +1,5 @@
 blib
+gen
 Makefile
 pm_to_blib
 VPreLex*.cpp
