@@ -51,6 +51,7 @@ LEX = flex
 YACC = bison
 PPSRC = ../Preproc
 FLEXFIX = $(PPSRC)/flexfix
+TOOLHASH = $(PPSRC)/toolhash
 XSUBPPFIX = $(PPSRC)/xsubppfix
 
 VPATH += . $(PPSRC)
@@ -60,8 +61,8 @@ VPreProc.o:	VPreLex.h VPreProc.h VFileLine.h
 VFileLine.o:	                         VFileLine.h
 
 VPreLex_pretmp.cpp: VPreLex.l
-	$(LEX) --version
-	$(LEX) $(LEXFLAGS) -o$@ $<
+	-$(LEX) --version
+	$(PERL) $(TOOLHASH) --in $< --out $@ --cmd $(LEX) $(LEXFLAGS) -o$@ $<
 
 VPreLex.cpp: $(FLEXFIX) VPreLex_pretmp.cpp
 	$(PERL) $(FLEXFIX) VPreLex < VPreLex_pretmp.cpp > $@
